# steam-tracer-cleaner

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  app.manifest  app.rc  steam-tracer-cleaner.sln  steam-tracer-cleaner.vcxproj  steam-tracer-cleaner.vcxproj.filters
.github/workflows/: ci.yml  release.yml
app/: CMakeLists.txt  app_state.cpp  app_state.hpp  win_main.cpp
cmake/: compile_options.cmake
core/: CMakeLists.txt  appid_map.cpp  appid_map.hpp  audit.cpp  audit.hpp  autoexec.cpp  autoexec.hpp  backup.cpp  backup.hpp  browser_cookies.cpp  browser_cookies.hpp  cleaner.cpp  cleaner.hpp  config_library.cpp  config_library.hpp  crash_dumps.cpp  crash_dumps.hpp  dry_run.cpp  dry_run.hpp  ignore_list.cpp  ignore_list.hpp  log.cpp  log.hpp  operation.hpp  profile.cpp  profile.hpp  scheduled_clean.cpp  scheduled_clean.hpp  steam_lifecycle.cpp  steam_lifecycle.hpp  steam_paths.cpp  steam_paths.hpp  targets.cpp  targets.hpp  update_check.cpp  update_check.hpp  vdf.cpp  vdf.hpp  version.hpp
platform/: CMakeLists.txt  fs.cpp  fs.hpp  paths.cpp  paths.hpp  process.cpp  process.hpp  registry.cpp  registry.hpp
tests/: CMakeLists.txt  test_appid_map.cpp  test_avatar_resolver.cpp  test_dry_run.cpp  test_ignore_list.cpp  test_steam_paths.cpp  test_update_check.cpp  test_vdf.cpp
ui/: CMakeLists.txt  fonts.cpp  fonts.hpp  icons.cpp  icons.hpp  icons_data.cpp  main_window.cpp  main_window.hpp  theme.cpp  theme.hpp  util.hpp
ui/screens/: audit_screen.cpp  audit_screen.hpp  backups_screen.cpp  backups_screen.hpp  cleaner_screen.cpp  cleaner_screen.hpp  configs_screen.cpp  configs_screen.hpp  settings_screen.cpp  settings_screen.hpp
ui/widgets/: account_picker.cpp  account_picker.hpp  target_tree.cpp  target_tree.hpp
